<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.hw12_maktab67_part1_version2.VM"/>
        <variable
            name="vm"
            type="VM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ComingSoonFragment"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coming_soon_one"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toTopOf="@+id/coming_soon_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                imageLoader="@{vm.comingSoonOne.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/coming_soon_one" />

            <TextView
                android:id="@+id/name_movie_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{vm.comingSoonOne.name}"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/share_movie_one"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/coming_soon_one_share" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coming_soon_two"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toTopOf="@+id/coming_soon_three"
            app:layout_constraintEnd_toEndOf="@+id/coming_soon_one"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/coming_soon_one"
            app:layout_constraintTop_toBottomOf="@+id/coming_soon_one">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                imageLoader="@{vm.comingSoonTwo.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/coming_soon_two" />

            <TextView
                android:id="@+id/name_movie_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{vm.comingSoonTwo.name}"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/share_movie_two"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/coming_soon_two_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coming_soon_three"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/coming_soon_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/coming_soon_two"
            app:layout_constraintTop_toBottomOf="@+id/coming_soon_two">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                imageLoader="@{vm.comingSoonThree.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/coming_soon_three" />

            <TextView
                android:id="@+id/name_movie_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{vm.comingSoonThree.name}"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/share_movie_three"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/coming_soon_three_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>