<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.hw12_maktab67_part1_version2.VM"/>
        <import type="com.example.hw12_maktab67_part1_version2.Profile"/>
        <import type="androidx.lifecycle.LiveData"/>

        <variable
            name="vm"
            type="VM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ProfileFragment">

        <LinearLayout
            android:id="@+id/registerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{vm.isProfileSet ? View.GONE : View.VISIBLE, default = visible}">

            <ImageView
                android:id="@+id/register_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_image_btn"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/capture_picture"
                android:textAllCaps="false" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:hint="@string/name"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:hint="@string/family"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:hint="@string/username"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:hint="@string/family"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:hint="@string/phone_number"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_profile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/register" />
        </LinearLayout>

        <LinearLayout
            android:visibility="@{vm.isProfileSet ? View.VISIBLE : View.GONE, default = gone}"
            android:id="@+id/show_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/show_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                profile_image="@{vm.user.image}"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/show_name"
                android:text="@{vm.user.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Name" />

            <TextView
                android:text="@{vm.user.family}"
                android:id="@+id/show_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Family" />

            <TextView
                android:text="@{vm.user.username}"
                android:id="@+id/show_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Username" />

            <TextView
                android:text="@{vm.user.email}"
                android:id="@+id/show_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Email" />

            <TextView
                android:text="@{vm.user.phoneNum}"
                android:id="@+id/show_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Phone Number" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>